Add structure to navigation menu

--- a/index.html
+++ b/index.html
@@ -6,14 +6,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
-
+  <link rel="stylesheet" href="fontawesome-free-5.12.0-web/">
 
 <title>Kind Cornwall</title>
 
 </head>
 
 <body>
-    <h1>Hello world!</h1>
+    <header>
+        <!-- navigation menu -->
+        <nav>
+          <div class="nav-bar">
+            <!-- nav header -->
+            <div class="nav-header">
+              <img src="assets/images/kind-cornwall-logo.png" class="logo" alt="logo" />
+              <button class="nav-toggle">
+                <i class="fas fa-bars"></i>
+              </button>
+            </div>
+            <!-- links -->
+            <ul class="nav-menu">
+              <li>
+                <a href="index.html" class="active">home</a>
+              </li>
+              <li>
+                <a href="community.html">community</a>
+              </li>
+            </ul>
+            <!-- social media -->
+            <ul class="social-icons">
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
 
 
